# dllman

./: CMakeLists.txt  README.md
include/: dllman.h
include/dllman/: container.h  coreclr.h  dllman.h  native.h
src/: coreclr.cpp  coreclrhost.h  dllman.c  libdl.c  msvc.c  native.c  native.cpp
